--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-image-gallery": "^1.2.11",
+    "react-kakao-maps-sdk": "^1.1.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
