--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.24.0",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "formik": "^1.5.8",
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.24.0",
+    "nodemailer": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
