--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "concurrently": "^7.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.7.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.0",
     "path": "^0.12.7",
     "yup": "^0.32.11"
   },
