--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^4.7.1",
     "react-image-gallery": "^1.2.11",
     "react-kakao-maps-sdk": "^1.1.5",
     "react-redux": "^8.0.5",
@@ -24,6 +25,7 @@
     "redux": "^4.2.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.27.0"
   },
