--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.24.0",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "formik": "^1.5.8",
     "http-proxy-middleware": "^2.0.6",
