--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "moment": "^2.24.0",
     "nodemailer": "^6.9.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
